@@ -70,6 +70,38 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|locks
+operator|.
+name|ReentrantReadWriteLock
+operator|.
+name|ReadLock
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|locks
+operator|.
+name|ReentrantReadWriteLock
+operator|.
+name|WriteLock
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -871,14 +903,17 @@ init|=
 operator|-
 literal|1
 decl_stmt|;
-DECL|field|maximumAllocationLock
+DECL|field|maxAllocReadLock
 specifier|private
-name|ReentrantReadWriteLock
-name|maximumAllocationLock
-init|=
-operator|new
-name|ReentrantReadWriteLock
-argument_list|()
+specifier|final
+name|ReadLock
+name|maxAllocReadLock
+decl_stmt|;
+DECL|field|maxAllocWriteLock
+specifier|private
+specifier|final
+name|WriteLock
+name|maxAllocWriteLock
 decl_stmt|;
 DECL|field|useConfiguredMaximumAllocationOnly
 specifier|private
@@ -971,6 +1006,31 @@ name|super
 argument_list|(
 name|name
 argument_list|)
+expr_stmt|;
+name|ReentrantReadWriteLock
+name|lock
+init|=
+operator|new
+name|ReentrantReadWriteLock
+argument_list|()
+decl_stmt|;
+name|this
+operator|.
+name|maxAllocReadLock
+operator|=
+name|lock
+operator|.
+name|readLock
+argument_list|()
+expr_stmt|;
+name|this
+operator|.
+name|maxAllocWriteLock
+operator|=
+name|lock
+operator|.
+name|writeLock
+argument_list|()
 expr_stmt|;
 block|}
 annotation|@
@@ -1231,17 +1291,7 @@ block|{
 name|Resource
 name|maxResource
 decl_stmt|;
-name|ReentrantReadWriteLock
-operator|.
-name|ReadLock
-name|readLock
-init|=
-name|maximumAllocationLock
-operator|.
-name|readLock
-argument_list|()
-decl_stmt|;
-name|readLock
+name|maxAllocReadLock
 operator|.
 name|lock
 argument_list|()
@@ -1298,7 +1348,7 @@ block|}
 block|}
 finally|finally
 block|{
-name|readLock
+name|maxAllocReadLock
 operator|.
 name|unlock
 argument_list|()
@@ -1317,17 +1367,7 @@ name|Resource
 name|maximumAllocation
 parameter_list|)
 block|{
-name|ReentrantReadWriteLock
-operator|.
-name|WriteLock
-name|writeLock
-init|=
-name|maximumAllocationLock
-operator|.
-name|writeLock
-argument_list|()
-decl_stmt|;
-name|writeLock
+name|maxAllocWriteLock
 operator|.
 name|lock
 argument_list|()
@@ -1369,7 +1409,7 @@ block|}
 block|}
 finally|finally
 block|{
-name|writeLock
+name|maxAllocWriteLock
 operator|.
 name|unlock
 argument_list|()
@@ -3107,12 +3147,51 @@ operator|+
 name|newResource
 argument_list|)
 expr_stmt|;
+name|nodes
+operator|.
+name|remove
+argument_list|(
+name|nm
+operator|.
+name|getNodeID
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|updateMaximumAllocation
+argument_list|(
+name|node
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
 comment|// update resource to node
 name|node
 operator|.
 name|setTotalResource
 argument_list|(
 name|newResource
+argument_list|)
+expr_stmt|;
+name|nodes
+operator|.
+name|put
+argument_list|(
+name|nm
+operator|.
+name|getNodeID
+argument_list|()
+argument_list|,
+operator|(
+name|N
+operator|)
+name|node
+argument_list|)
+expr_stmt|;
+name|updateMaximumAllocation
+argument_list|(
+name|node
+argument_list|,
+literal|true
 argument_list|)
 expr_stmt|;
 comment|// update resource to clusterResource
@@ -3218,17 +3297,15 @@ name|boolean
 name|add
 parameter_list|)
 block|{
-name|ReentrantReadWriteLock
-operator|.
-name|WriteLock
-name|writeLock
+name|Resource
+name|totalResource
 init|=
-name|maximumAllocationLock
+name|node
 operator|.
-name|writeLock
+name|getTotalResource
 argument_list|()
 decl_stmt|;
-name|writeLock
+name|maxAllocWriteLock
 operator|.
 name|lock
 argument_list|()
@@ -3244,10 +3321,7 @@ comment|// added node
 name|int
 name|nodeMemory
 init|=
-name|node
-operator|.
-name|getTotalResource
-argument_list|()
+name|totalResource
 operator|.
 name|getMemory
 argument_list|()
@@ -3284,10 +3358,7 @@ block|}
 name|int
 name|nodeVCores
 init|=
-name|node
-operator|.
-name|getTotalResource
-argument_list|()
+name|totalResource
 operator|.
 name|getVirtualCores
 argument_list|()
@@ -3329,10 +3400,7 @@ if|if
 condition|(
 name|maxNodeMemory
 operator|==
-name|node
-operator|.
-name|getTotalResource
-argument_list|()
+name|totalResource
 operator|.
 name|getMemory
 argument_list|()
@@ -3348,10 +3416,7 @@ if|if
 condition|(
 name|maxNodeVCores
 operator|==
-name|node
-operator|.
-name|getTotalResource
-argument_list|()
+name|totalResource
 operator|.
 name|getVirtualCores
 argument_list|()
@@ -3534,7 +3599,7 @@ block|}
 block|}
 finally|finally
 block|{
-name|writeLock
+name|maxAllocWriteLock
 operator|.
 name|unlock
 argument_list|()
