@@ -68,6 +68,24 @@ name|hadoop
 operator|.
 name|yarn
 operator|.
+name|api
+operator|.
+name|records
+operator|.
+name|ResourceOption
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
 name|conf
 operator|.
 name|YarnConfiguration
@@ -1844,6 +1862,333 @@ expr_stmt|;
 name|verifyMaximumResourceCapability
 argument_list|(
 name|configuredMaximumResource
+argument_list|,
+name|scheduler
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|rm
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+annotation|@
+name|Test
+DECL|method|testMaxAllocationAfterUpdateNodeResource ()
+specifier|public
+name|void
+name|testMaxAllocationAfterUpdateNodeResource
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+specifier|final
+name|int
+name|configuredMaxVCores
+init|=
+literal|20
+decl_stmt|;
+specifier|final
+name|int
+name|configuredMaxMemory
+init|=
+literal|10
+operator|*
+literal|1024
+decl_stmt|;
+name|Resource
+name|configuredMaximumResource
+init|=
+name|Resource
+operator|.
+name|newInstance
+argument_list|(
+name|configuredMaxMemory
+argument_list|,
+name|configuredMaxVCores
+argument_list|)
+decl_stmt|;
+name|configureScheduler
+argument_list|()
+expr_stmt|;
+name|YarnConfiguration
+name|conf
+init|=
+name|getConf
+argument_list|()
+decl_stmt|;
+name|conf
+operator|.
+name|setInt
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|RM_SCHEDULER_MAXIMUM_ALLOCATION_VCORES
+argument_list|,
+name|configuredMaxVCores
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setInt
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|RM_SCHEDULER_MAXIMUM_ALLOCATION_MB
+argument_list|,
+name|configuredMaxMemory
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setLong
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|RM_WORK_PRESERVING_RECOVERY_SCHEDULING_WAIT_MS
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|MockRM
+name|rm
+init|=
+operator|new
+name|MockRM
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|rm
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|AbstractYarnScheduler
+name|scheduler
+init|=
+operator|(
+name|AbstractYarnScheduler
+operator|)
+name|rm
+operator|.
+name|getResourceScheduler
+argument_list|()
+decl_stmt|;
+name|verifyMaximumResourceCapability
+argument_list|(
+name|configuredMaximumResource
+argument_list|,
+name|scheduler
+argument_list|)
+expr_stmt|;
+name|Resource
+name|resource1
+init|=
+name|Resource
+operator|.
+name|newInstance
+argument_list|(
+literal|2048
+argument_list|,
+literal|5
+argument_list|)
+decl_stmt|;
+name|Resource
+name|resource2
+init|=
+name|Resource
+operator|.
+name|newInstance
+argument_list|(
+literal|4096
+argument_list|,
+literal|10
+argument_list|)
+decl_stmt|;
+name|Resource
+name|resource3
+init|=
+name|Resource
+operator|.
+name|newInstance
+argument_list|(
+literal|512
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+name|Resource
+name|resource4
+init|=
+name|Resource
+operator|.
+name|newInstance
+argument_list|(
+literal|1024
+argument_list|,
+literal|2
+argument_list|)
+decl_stmt|;
+name|RMNode
+name|node1
+init|=
+name|MockNodes
+operator|.
+name|newNodeInfo
+argument_list|(
+literal|0
+argument_list|,
+name|resource1
+argument_list|,
+literal|1
+argument_list|,
+literal|"127.0.0.2"
+argument_list|)
+decl_stmt|;
+name|scheduler
+operator|.
+name|handle
+argument_list|(
+operator|new
+name|NodeAddedSchedulerEvent
+argument_list|(
+name|node1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|RMNode
+name|node2
+init|=
+name|MockNodes
+operator|.
+name|newNodeInfo
+argument_list|(
+literal|0
+argument_list|,
+name|resource3
+argument_list|,
+literal|2
+argument_list|,
+literal|"127.0.0.3"
+argument_list|)
+decl_stmt|;
+name|scheduler
+operator|.
+name|handle
+argument_list|(
+operator|new
+name|NodeAddedSchedulerEvent
+argument_list|(
+name|node2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|verifyMaximumResourceCapability
+argument_list|(
+name|resource1
+argument_list|,
+name|scheduler
+argument_list|)
+expr_stmt|;
+comment|// increase node1 resource
+name|scheduler
+operator|.
+name|updateNodeResource
+argument_list|(
+name|node1
+argument_list|,
+name|ResourceOption
+operator|.
+name|newInstance
+argument_list|(
+name|resource2
+argument_list|,
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|verifyMaximumResourceCapability
+argument_list|(
+name|resource2
+argument_list|,
+name|scheduler
+argument_list|)
+expr_stmt|;
+comment|// decrease node1 resource
+name|scheduler
+operator|.
+name|updateNodeResource
+argument_list|(
+name|node1
+argument_list|,
+name|ResourceOption
+operator|.
+name|newInstance
+argument_list|(
+name|resource1
+argument_list|,
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|verifyMaximumResourceCapability
+argument_list|(
+name|resource1
+argument_list|,
+name|scheduler
+argument_list|)
+expr_stmt|;
+comment|// increase node2 resource
+name|scheduler
+operator|.
+name|updateNodeResource
+argument_list|(
+name|node2
+argument_list|,
+name|ResourceOption
+operator|.
+name|newInstance
+argument_list|(
+name|resource4
+argument_list|,
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|verifyMaximumResourceCapability
+argument_list|(
+name|resource1
+argument_list|,
+name|scheduler
+argument_list|)
+expr_stmt|;
+comment|// decrease node2 resource
+name|scheduler
+operator|.
+name|updateNodeResource
+argument_list|(
+name|node2
+argument_list|,
+name|ResourceOption
+operator|.
+name|newInstance
+argument_list|(
+name|resource3
+argument_list|,
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|verifyMaximumResourceCapability
+argument_list|(
+name|resource1
 argument_list|,
 name|scheduler
 argument_list|)
